minikube/05_ingress-gateway-istio/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gallery-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: gallery.local
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
